k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: templ-pipeline-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "templ-pipeline.dyn.cloud.e-infra.cz"  # Change this to your desired subdomain
      secretName: templ-pipeline-dyn-cloud-e-infra-cz-tls
  rules:
  - host: "templ-pipeline.dyn.cloud.e-infra.cz"  # Change this to your desired subdomain
    http:
      paths:
      - backend:
          service:
            name: templ-pipeline-svc
            port:
              number: 80
        pathType: ImplementationSpecific
